[build-system]
requires = ["setuptools>=61.2.0", "wheel==0.41.3", "pip-tools==7.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telicent-lib"
version = "4.0.0"
authors = [{name = "Telicent Ltd", email = "opensource@telicent.io"}]
description = "A helper package for building Adapters, Mappers and Projectors for Telicent Core"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "colored==2.3.0",
    "rdflib==6.3.2",
    "pytz==2025.2",
    "confluent-kafka==2.8.2",
    "opentelemetry-api==1.20.0",
    "opentelemetry-sdk==1.20.0"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
    "ruff==0.1.5",
    "types-pytz==2023.3.1.1",
    "urllib3==2.2.2",
    "types-requests==2.32.0.20240622",
    "mypy==1.7.0",
    "mkdocs==1.5.3",
    "cyclonedx-bom==4.4.3"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.ruff]
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "C901", # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120

[project.urls]
Repository = "https://github.com/telicent-oss/telicent-lib"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["telicent_lib*"]
namespaces = true

[tool.setuptools.package-data]
"telicent_lib" = ["sbom.json"]

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
modules = ["telicent_lib", "tests", "debug"]
